# Hyphen

./: Cargo.toml  README.md  README_CN.md
crates/hyphen-consensus/: Cargo.toml
crates/hyphen-consensus/src/: chain.rs  genesis.rs  lib.rs  validator.rs
crates/hyphen-core/: Cargo.toml
crates/hyphen-core/src/: block.rs  config.rs  error.rs  lib.rs  timestamp.rs
crates/hyphen-crypto/: Cargo.toml
crates/hyphen-crypto/src/: clsag.rs  hash.rs  keys.rs  lib.rs  merkle.rs  pedersen.rs  pq.rs  stealth.rs
crates/hyphen-economics/: Cargo.toml
crates/hyphen-economics/src/: emission.rs  fees.rs  lib.rs
crates/hyphen-explorer/: Cargo.toml
crates/hyphen-explorer/src/: index.html  lib.rs
crates/hyphen-mempool/: Cargo.toml
crates/hyphen-mempool/src/: lib.rs
crates/hyphen-network/: Cargo.toml
crates/hyphen-network/src/: behaviour.rs  lib.rs  protocol.rs  sync.rs
crates/hyphen-node/: Cargo.toml
crates/hyphen-node/src/: main.rs
crates/hyphen-pow/: Cargo.toml
crates/hyphen-pow/src/: arena.rs  difficulty.rs  kernels.rs  lib.rs  scratchpad.rs  solver.rs
crates/hyphen-proof/: Cargo.toml
crates/hyphen-proof/src/: batch.rs  generators.rs  inner_product.rs  lib.rs  range_proof.rs
crates/hyphen-rpc/: Cargo.toml
crates/hyphen-rpc/src/: handler.rs  lib.rs  messages.rs  server.rs
crates/hyphen-state/: Cargo.toml
crates/hyphen-state/src/: chain_state.rs  commitment_tree.rs  compress.rs  lib.rs  nullifier_set.rs  store.rs
crates/hyphen-token/: Cargo.toml
crates/hyphen-token/src/: asset.rs  issuance.rs  lib.rs  token_tx.rs
crates/hyphen-transport/: Cargo.toml
crates/hyphen-transport/src/: lib.rs
crates/hyphen-tx/: Cargo.toml
crates/hyphen-tx/src/: builder.rs  lib.rs  note.rs  nullifier.rs  transaction.rs
crates/hyphen-tx/tests/: balance_check.rs  e2e_clsag_verify.rs
crates/hyphen-vm/: Cargo.toml
crates/hyphen-vm/src/: contract.rs  engine.rs  gas.rs  host.rs  lib.rs  state.rs  types.rs
crates/hyphen-wallet/: Cargo.toml
crates/hyphen-wallet/src/: address.rs  derivation.rs  lib.rs  wallet.rs
src/: lib.rs
