[workspace]
members = [
    "crates/hyphen-crypto",
    "crates/hyphen-core",
    "crates/hyphen-pow",
    "crates/hyphen-proof",
    "crates/hyphen-tx",
    "crates/hyphen-economics",
    "crates/hyphen-state",
    "crates/hyphen-consensus",
    "crates/hyphen-mempool",
    "crates/hyphen-network",
    "crates/hyphen-transport",
    "crates/hyphen-node",
    "crates/hyphen-wallet",
    "crates/hyphen-token",
    "crates/hyphen-rpc",
    "crates/hyphen-vm",
    "crates/hyphen-explorer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hyphen Contributors"]
license = "AGPL-3.0"
description = "Hyphen – a privacy-focused, CPU-first PoW blockchain"

[workspace.dependencies]
# ── internal crates ──
hyphen-crypto    = { path = "crates/hyphen-crypto" }
hyphen-core      = { path = "crates/hyphen-core" }
hyphen-pow       = { path = "crates/hyphen-pow" }
hyphen-proof     = { path = "crates/hyphen-proof" }
hyphen-tx        = { path = "crates/hyphen-tx" }
hyphen-economics = { path = "crates/hyphen-economics" }
hyphen-state     = { path = "crates/hyphen-state" }
hyphen-consensus = { path = "crates/hyphen-consensus" }
hyphen-mempool   = { path = "crates/hyphen-mempool" }
hyphen-network   = { path = "crates/hyphen-network" }
hyphen-node      = { path = "crates/hyphen-node" }
hyphen-transport        = { path = "crates/hyphen-transport" }
hyphen-wallet    = { path = "crates/hyphen-wallet" }
hyphen-token     = { path = "crates/hyphen-token" }
hyphen-rpc       = { path = "crates/hyphen-rpc" }
hyphen-vm        = { path = "crates/hyphen-vm" }
hyphen-explorer  = { path = "crates/hyphen-explorer" }

# ── cryptography ──
blake3           = "1.8"
curve25519-dalek = { version = "4.1", features = ["serde", "digest", "rand_core"] }
ed25519-dalek    = { version = "2.1", features = ["serde", "rand_core"] }
merlin           = "3"

# ── serialisation ──
serde            = { version = "1", features = ["derive"] }
bincode          = "1"
prost            = "0.13"
prost-types      = "0.13"
bs58             = "0.5"

# ── storage ──
sled             = "0.34"
zstd             = "0.13"
wasmer           = "5"

# ── async / networking ──
tokio            = { version = "1", features = ["full"] }
futures          = "0.3"
axum             = "0.8"
libp2p           = { version = "0.56", features = [
    "tcp", "noise", "yamux", "gossipsub", "kad",
    "identify", "ping", "request-response", "cbor",
    "relay", "dcutr", "dns", "tokio", "macros", "serde",
    "autonat",
] }
async-trait      = "0.1"
tower-http       = { version = "0.6", features = ["cors"] }

# ── utilities ──
rand             = "0.8"
rand_core        = { version = "0.6", features = ["getrandom"] }
rand_chacha      = "0.3"
hex              = { version = "0.4", features = ["serde"] }
thiserror        = "1"
log              = "0.4"
env_logger       = "0.11"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json       = "1"
chrono           = { version = "0.4", features = ["serde"] }
parking_lot      = "0.12"
byteorder        = "1"
clap             = { version = "4", features = ["derive"] }
once_cell        = "1"
zeroize          = { version = "1", features = ["derive"] }
unsigned-varint  = "0.8"
sntpc            = "0.3"

[package]
name = "hyphen"
version.workspace = true
edition.workspace = true

[dependencies]
hyphen-crypto.workspace    = true
hyphen-core.workspace      = true
hyphen-pow.workspace       = true
hyphen-proof.workspace     = true
hyphen-tx.workspace        = true
hyphen-economics.workspace = true
hyphen-state.workspace     = true
hyphen-consensus.workspace = true
hyphen-mempool.workspace   = true
hyphen-network.workspace   = true
hyphen-wallet.workspace    = true
hyphen-token.workspace     = true
hyphen-rpc.workspace       = true
hyphen-vm.workspace        = true
hyphen-explorer.workspace  = true
