[package]
name = "hyphen-core"
version.workspace = true
edition.workspace = true
description = "Core types and configuration for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace = true
serde.workspace         = true
bincode.workspace       = true
chrono.workspace        = true
thiserror.workspace     = true
hex.workspace           = true
rand.workspace          = true
