[package]
name = "hyphen-core"
version.workspace = true
edition.workspace = true
description = "Core types and configuration for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace = true
serde.workspace         = true
bincode.workspace       = true
chrono.workspace        = true
thiserror.workspace     = true
hex.workspace           = true
rand.workspace          = true
parking_lot.workspace   = true
tracing.workspace       = true
sntpc.workspace         = true
tokio.workspace         = true
once_cell.workspace     = true
