[package]
name = "hyphen-crypto"
version.workspace = true
edition.workspace = true
description = "Cryptographic primitives for the Hyphen blockchain"

[dependencies]
blake3.workspace           = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace    = true
merlin.workspace           = true
serde.workspace            = true
bincode.workspace          = true
bs58.workspace             = true
rand.workspace             = true
rand_core.workspace        = true
hex.workspace              = true
thiserror.workspace        = true
zeroize.workspace          = true
once_cell.workspace        = true
