[package]
name = "hyphen-explorer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Blockchain explorer for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace    = true
hyphen-core.workspace      = true
hyphen-consensus.workspace = true
hyphen-economics.workspace = true
hyphen-state.workspace     = true

axum.workspace = true
hex.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
parking_lot.workspace = true
