[package]
name = "hyphen-proof"
version.workspace = true
edition.workspace = true
description = "Bulletproofs range proofs and batch verification for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace    = true
curve25519-dalek.workspace = true
blake3.workspace           = true
merlin.workspace           = true
rand.workspace             = true
rand_core.workspace        = true
serde.workspace            = true
bincode.workspace          = true
thiserror.workspace        = true
once_cell.workspace        = true
