[package]
name = "hyphen-token"
version.workspace = true
edition.workspace = true
description = "Token and asset management for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace    = true
hyphen-core.workspace      = true
hyphen-proof.workspace     = true
blake3.workspace           = true
curve25519-dalek.workspace = true
serde.workspace            = true
bincode.workspace          = true
hex.workspace              = true
thiserror.workspace        = true
rand.workspace             = true
