[package]
name = "hyphen-tx"
version.workspace = true
edition.workspace = true
description = "Shielded UTXO transaction model for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace    = true
hyphen-proof.workspace     = true
curve25519-dalek.workspace = true
serde.workspace            = true
bincode.workspace          = true
rand.workspace             = true
rand_core.workspace        = true
thiserror.workspace        = true
hex.workspace              = true
zeroize.workspace          = true
