[package]
name = "hyphen-vm"
version.workspace = true
edition.workspace = true
description = "WASM smart contract execution engine for the Hyphen blockchain"

[dependencies]
hyphen-crypto.workspace = true
hyphen-core.workspace   = true
hyphen-state.workspace  = true
hyphen-token.workspace  = true
serde.workspace         = true
bincode.workspace       = true
thiserror.workspace     = true
tracing.workspace       = true
blake3.workspace        = true
wasmer.workspace            = true
hex.workspace           = true
sled.workspace          = true
